src/OpenCvSharpExtern/core_FileStorage.h

CVAPI(void) core_FileStorage_shift_Vec2i(cv::FileStorage *fs, CvVec2i v)
{
    (*fs) << cv::Vec2i(v.val[0], v.val[1]);
}
CVAPI(void) core_FileStorage_shift_Vec3i(cv::FileStorage *fs, CvVec3i v)
{
    (*fs) << cv::Vec3i(v.val[0], v.val[1], v.val[2]);
}
CVAPI(void) core_FileStorage_shift_Vec4i(cv::FileStorage *fs, CvVec4i v)
{
    (*fs) << cv::Vec4i(v.val[0], v.val[1], v.val[2], v.val[3]);
}
CVAPI(void) core_FileStorage_shift_Vec6i(cv::FileStorage *fs, CvVec6i v)
{
    (*fs) << cv::Vec6i(v.val[0], v.val[1], v.val[2], v.val[3], v.val[4], v.val[5]);
}
CVAPI(void) core_FileStorage_shift_Vec2d(cv::FileStorage *fs, CvVec2d v)
{
    (*fs) << cv::Vec2d(v.val[0], v.val[1]);
}
CVAPI(void) core_FileStorage_shift_Vec3d(cv::FileStorage *fs, CvVec3d v)
{
    (*fs) << cv::Vec3d(v.val[0], v.val[1], v.val[2]);
}
CVAPI(void) core_FileStorage_shift_Vec4d(cv::FileStorage *fs, CvVec4d v)
{
    (*fs) << cv::Vec4d(v.val[0], v.val[1], v.val[2], v.val[3]);
}
CVAPI(void) core_FileStorage_shift_Vec6d(cv::FileStorage *fs, CvVec6d v)
{
    (*fs) << cv::Vec6d(v.val[0], v.val[1], v.val[2], v.val[3], v.val[4], v.val[5]);
}
CVAPI(void) core_FileStorage_shift_Vec2f(cv::FileStorage *fs, CvVec2f v)
{
    (*fs) << cv::Vec2f(v.val[0], v.val[1]);
}
CVAPI(void) core_FileStorage_shift_Vec3f(cv::FileStorage *fs, CvVec3f v)
{
    (*fs) << cv::Vec3f(v.val[0], v.val[1], v.val[2]);
}
CVAPI(void) core_FileStorage_shift_Vec4f(cv::FileStorage *fs, CvVec4f v)
{
    (*fs) << cv::Vec4f(v.val[0], v.val[1], v.val[2], v.val[3]);
}
CVAPI(void) core_FileStorage_shift_Vec6f(cv::FileStorage *fs, CvVec6f v)
{
    (*fs) << cv::Vec6f(v.val[0], v.val[1], v.val[2], v.val[3], v.val[4], v.val[5]);
}
CVAPI(void) core_FileStorage_shift_Vec2b(cv::FileStorage *fs, CvVec2b v)
{
    (*fs) << cv::Vec2b(v.val[0], v.val[1]);
}
CVAPI(void) core_FileStorage_shift_Vec3b(cv::FileStorage *fs, CvVec3b v)
{
    (*fs) << cv::Vec3b(v.val[0], v.val[1], v.val[2]);
}
CVAPI(void) core_FileStorage_shift_Vec4b(cv::FileStorage *fs, CvVec4b v)
{
    (*fs) << cv::Vec4b(v.val[0], v.val[1], v.val[2], v.val[3]);
}
CVAPI(void) core_FileStorage_shift_Vec6b(cv::FileStorage *fs, CvVec6b v)
{
    (*fs) << cv::Vec6b(v.val[0], v.val[1], v.val[2], v.val[3], v.val[4], v.val[5]);
}
CVAPI(void) core_FileStorage_shift_Vec2s(cv::FileStorage *fs, CvVec2s v)
{
    (*fs) << cv::Vec2s(v.val[0], v.val[1]);
}
CVAPI(void) core_FileStorage_shift_Vec3s(cv::FileStorage *fs, CvVec3s v)
{
    (*fs) << cv::Vec3s(v.val[0], v.val[1], v.val[2]);
}
CVAPI(void) core_FileStorage_shift_Vec4s(cv::FileStorage *fs, CvVec4s v)
{
    (*fs) << cv::Vec4s(v.val[0], v.val[1], v.val[2], v.val[3]);
}
CVAPI(void) core_FileStorage_shift_Vec6s(cv::FileStorage *fs, CvVec6s v)
{
    (*fs) << cv::Vec6s(v.val[0], v.val[1], v.val[2], v.val[3], v.val[4], v.val[5]);
}
CVAPI(void) core_FileStorage_shift_Vec2w(cv::FileStorage *fs, CvVec2w v)
{
    (*fs) << cv::Vec2w(v.val[0], v.val[1]);
}
CVAPI(void) core_FileStorage_shift_Vec3w(cv::FileStorage *fs, CvVec3w v)
{
    (*fs) << cv::Vec3w(v.val[0], v.val[1], v.val[2]);
}
CVAPI(void) core_FileStorage_shift_Vec4w(cv::FileStorage *fs, CvVec4w v)
{
    (*fs) << cv::Vec4w(v.val[0], v.val[1], v.val[2], v.val[3]);
}
CVAPI(void) core_FileStorage_shift_Vec6w(cv::FileStorage *fs, CvVec6w v)
{
    (*fs) << cv::Vec6w(v.val[0], v.val[1], v.val[2], v.val[3], v.val[4], v.val[5]);
}