src/OpenCvSharp/Internal/PInvoke/NativeMethods/core/NativeMethods_core_FileStorage.cs


    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_FileStorage_shift_Vec2i(OpenCvSafeHandle fs, Vec2i val);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_FileStorage_shift_Vec3i(OpenCvSafeHandle fs, Vec3i val);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_FileStorage_shift_Vec4i(OpenCvSafeHandle fs, Vec4i val);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_FileStorage_shift_Vec6i(OpenCvSafeHandle fs, Vec6i val);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_FileStorage_shift_Vec2d(OpenCvSafeHandle fs, Vec2d val);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_FileStorage_shift_Vec3d(OpenCvSafeHandle fs, Vec3d val);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_FileStorage_shift_Vec4d(OpenCvSafeHandle fs, Vec4d val);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_FileStorage_shift_Vec6d(OpenCvSafeHandle fs, Vec6d val);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_FileStorage_shift_Vec2f(OpenCvSafeHandle fs, Vec2f val);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_FileStorage_shift_Vec3f(OpenCvSafeHandle fs, Vec3f val);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_FileStorage_shift_Vec4f(OpenCvSafeHandle fs, Vec4f val);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_FileStorage_shift_Vec6f(OpenCvSafeHandle fs, Vec6f val);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_FileStorage_shift_Vec2b(OpenCvSafeHandle fs, Vec2b val);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_FileStorage_shift_Vec3b(OpenCvSafeHandle fs, Vec3b val);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_FileStorage_shift_Vec4b(OpenCvSafeHandle fs, Vec4b val);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_FileStorage_shift_Vec6b(OpenCvSafeHandle fs, Vec6b val);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_FileStorage_shift_Vec2s(OpenCvSafeHandle fs, Vec2s val);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_FileStorage_shift_Vec3s(OpenCvSafeHandle fs, Vec3s val);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_FileStorage_shift_Vec4s(OpenCvSafeHandle fs, Vec4s val);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_FileStorage_shift_Vec6s(OpenCvSafeHandle fs, Vec6s val);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_FileStorage_shift_Vec2w(OpenCvSafeHandle fs, Vec2w val);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_FileStorage_shift_Vec3w(OpenCvSafeHandle fs, Vec3w val);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_FileStorage_shift_Vec4w(OpenCvSafeHandle fs, Vec4w val);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_FileStorage_shift_Vec6w(OpenCvSafeHandle fs, Vec6w val);
}
